--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "jacobtread.github.io",
+  "name": "my-webpack-project",
   "version": "1.0.0",
-  "description": "Personal Website",
+  "description": "My webpack project",
   "main": "index.js",
   "scripts": {
-    "build": "babel assets/js/app.js -d assets/js"
+    "build": "webpack --mode=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve",
+    "serve:prod": "webpack serve --mode=production"
   },
   "repository": {
     "type": "git",
@@ -17,6 +22,26 @@
   },
   "homepage": "https://github.com/jacobtread/jacobtread.github.io#readme",
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^4.0.3",
+    "cssnano": "^5.0.1",
     "normalize.css": "^8.0.1"
+  },
+  "devDependencies": {
+    "@webpack-cli/generators": "^2.0.0",
+    "autoprefixer": "^10.2.5",
+    "css-loader": "^5.2.2",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.1",
+    "postcss": "^8.2.10",
+    "postcss-loader": "^5.2.0",
+    "sass": "^1.32.10",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "tailwindcss": "^2.1.1",
+    "ts-loader": "^9.0.0",
+    "typescript": "^4.2.4",
+    "webpack": "^5.33.2",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
