--- a/package.json
+++ b/package.json
@@ -1,48 +1,24 @@
 {
-  "name": "my-webpack-project",
+  "name": "jacobtread.github.io",
   "version": "1.0.0",
-  "description": "My webpack project",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "build": "webpack --mode=production",
-    "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production",
-    "watch": "webpack --watch",
-    "serve": "webpack serve",
-    "serve:prod": "webpack serve --mode=production"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jacobtread/jacobtread.github.io.git"
-  },
-  "author": "Jacobtread <jacobtread@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/jacobtread/jacobtread.github.io/issues"
-  },
-  "homepage": "https://github.com/jacobtread/jacobtread.github.io#readme",
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^4.0.3",
-    "cssnano": "^5.0.1",
-    "normalize.css": "^8.0.1",
-    "sharp-cli": "^1.15.0"
+    "@fontsource/roboto": "^4.5.1",
+    "@nuxt/content": "^1.14.0",
+    "core-js": "^3.15.1",
+    "nuxt": "^2.15.7"
   },
   "devDependencies": {
-    "@webpack-cli/generators": "^2.0.0",
-    "autoprefixer": "^10.2.5",
-    "css-loader": "^5.2.2",
-    "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^5.3.1",
-    "postcss": "^8.2.10",
-    "postcss-loader": "^5.2.0",
-    "sass": "^1.32.10",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
-    "tailwindcss": "^2.1.1",
-    "ts-loader": "^9.0.0",
-    "typescript": "^4.2.4",
-    "webpack": "^5.33.2",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "@nuxt/types": "^2.15.7",
+    "@nuxt/typescript-build": "^2.1.0",
+    "fibers": "^5.0.0",
+    "sass": "^1.43.2",
+    "sass-loader": "10"
   }
 }
