SVG Inline loading & Buttons for folio

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@nuxt/types": "^2.15.7",
     "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/svg": "^0.3.0",
     "fibers": "^5.0.0",
     "sass": "^1.43.2",
     "sass-loader": "10"
